# kanban

./: .gitignore  .mcp.json  CARDLIST_COMPONENT.md  CHANGELOG.md  CHANGELOG.md.bak  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PLAN.md  README.md  default.nix  example.json  flake.nix  git-mcp.json  kanban.json  shell.nix  tape.tape  temp  test-20251008-233620.json  test.json  test.md  test.tape
crates/kanban-api/: Cargo.toml
crates/kanban-api/src/: lib.rs
crates/kanban-cli/: Cargo.toml  README.md  build.rs
crates/kanban-cli/src/: app.rs  cli.rs  context.rs  error.rs  lib.rs  main.rs  output.rs  version.rs
crates/kanban-cli/src/handlers/: board.rs  card.rs  column.rs  export.rs  migrate.rs  mod.rs  relation.rs  sprint.rs
crates/kanban-cli/tests/: cli_app_builder.rs  cli_app_run_no_backends.rs  cli_integration.rs  migrate.rs
crates/kanban-core/: Cargo.toml  README.md  build.rs
crates/kanban-core/src/: client_id.rs  config.rs  datetime_input.rs  error.rs  health.rs  input.rs  lib.rs  logging.rs  paginated_list.rs  pagination.rs  result.rs  selection.rs  traits.rs  version.rs
crates/kanban-core/src/graph/: algorithms.rs  core.rs  dag.rs  edge.rs  error.rs  graph.rs  mod.rs  traits.rs  undirected.rs
crates/kanban-db/: Cargo.toml
crates/kanban-db/src/: connection.rs  lib.rs  models.rs  schema.rs
crates/kanban-domain/: Cargo.toml  README.md
crates/kanban-domain/src/: archived_card.rs  board.rs  card.rs  card_lifecycle.rs  card_pagination.rs  column.rs  command_store.rs  data_store.rs  deleted_card.rs  editable.rs  error.rs  field_update.rs  graph_operations.rs  history.rs  in_memory_data_store.rs  in_memory_store.rs  lib.rs  operations.rs  session_command_log.rs  snapshot.rs  sprint.rs  sprint_log.rs  tag.rs  task_list_view.rs
crates/kanban-domain/src/commands/: board_commands.rs  card_commands.rs  cascade.rs  cascade_commands.rs  column_commands.rs  dependency_commands.rs  mod.rs  sprint_commands.rs
crates/kanban-domain/src/dependencies/: card_edge.rs  card_graph.rs  dependency_graph.rs  edge_meta.rs  edges.rs  messages.rs  mod.rs
crates/kanban-domain/src/export/: exporter.rs  importer.rs  mod.rs  models.rs
crates/kanban-domain/src/filter/: card_filter.rs  card_filters.rs  mod.rs
crates/kanban-domain/src/query/: filter_sort.rs  mod.rs  sprint.rs
crates/kanban-domain/src/search/: mod.rs
crates/kanban-domain/src/sort/: mod.rs
crates/kanban-http-backend/: Cargo.toml
crates/kanban-http-backend/src/: lib.rs
crates/kanban-mcp/: Cargo.toml  README.md  default.nix
crates/kanban-mcp/src/: context.rs  error.rs  executor.rs  lib.rs  main.rs  server.rs  tools_trait.rs
crates/kanban-mcp/tests/: integration.rs  mcp_server_builder.rs
crates/kanban-persistence/: Cargo.toml  README.md
crates/kanban-persistence-json/: Cargo.toml  README.md
crates/kanban-persistence-json/src/: atomic_writer.rs  conflict.rs  json_file_store.rs  lib.rs
crates/kanban-persistence-json/src/migration/: backup.rs  migrator.rs  mod.rs  split_graph.rs  v1_to_v2.rs  v2_to_v3.rs  (+1 more)
crates/kanban-persistence-json/tests/: contract.rs  roundtrip.rs
crates/kanban-persistence-sqlite/: Cargo.toml  README.md
crates/kanban-persistence-sqlite/src/: builders.rs  helpers.rs  lib.rs  schema.sql  sqlite_data_store.rs  sqlite_store.rs  upserts.rs
crates/kanban-persistence-sqlite/tests/: concurrent.rs  contract.rs  data_store.rs  integration.rs  roundtrip.rs
crates/kanban-persistence/src/: error.rs  lib.rs  null_store.rs  registry.rs  schema.sql  snapshot_serde.rs  traits.rs
crates/kanban-persistence/tests/: store_contract_smoke.rs
crates/kanban-server/: Cargo.toml
crates/kanban-server/src/: main.rs
crates/kanban-service/: Cargo.toml  README.md
crates/kanban-service/src/: backend.rs  cascade.rs  config.rs  context.rs  json_backend.rs  lib.rs  null_store.rs  path.rs  sqlite_backend.rs  store_manager.rs  undo_stack.rs
crates/kanban-service/tests/: audit_log_append_only.rs  card_graph.rs  card_metadata_editor_format.rs  carry_over.rs  command_replay.rs  command_store_contract.rs  completion_sync.rs  context_open.rs  create_card_with_sprint.rs  data_integrity_tests.rs  delete_board_cascade.rs  export_to_sqlite_tests.rs  inverse_commands.rs  list_archived_cards_sort.rs  list_cards_filters.rs  list_cards_sort.rs  make_store.rs  migrate.rs  migrate_sprint_logs.rs  move_cards.rs  open_context.rs  persistence.rs  resolve.rs  sqlite_audit_log_persistence.rs  sqlite_backend.rs  sqlite_command_persistence.rs  store_manager_injection.rs  undo_redo.rs  undo_stack_scaffolding.rs  validate_and_load.rs  with_transaction.rs
crates/kanban-tui/: Cargo.toml  README.md
crates/kanban-tui/src/: app.rs  board_context.rs  card_list.rs  card_list_component.rs  clipboard.rs  dialog.rs  edit_format.rs  editor.rs  error_log.rs  events.rs  filters.rs  input.rs  layout_strategy.rs  lib.rs  markdown_renderer.rs  operations.rs  render_strategy.rs  scroll_indicators.rs  search.rs  selection.rs  task_list.rs  test_helpers.rs  tui_context.rs  ui.rs  view_strategy.rs
crates/kanban-tui/tests/: archive_delete_tests.rs  backend_selection_tests.rs  batch_completion_sync_tests.rs  card_description_test.rs  card_detail_tests.rs  card_list_component.rs  conflict_detection_tests.rs  conflict_popup_tests.rs  create_card_dialog_tests.rs  data_integrity_tests.rs  error_log_tests.rs  export_import_tests.rs  filter_popup_tests.rs  footer_tests.rs  help_popup_tests.rs  helpers.rs  import_failure_safety.rs  initial_board_selection_tests.rs  markdown_renderer.rs  model_integration_tests.rs  model_tests.rs  panel_title_tests.rs  relationship_popup_tests.rs  reload_tests.rs  render_data_refresh_tests.rs  save_error_tests.rs  scroll_board_edit_lists.rs  scroll_preservation_tests.rs  settings_config_edit_tests.rs  settings_export_tests.rs  settings_navigation_tests.rs  settings_storage_tests.rs  settings_tests.rs  settings_ui_tests.rs  sprint_assign_dialog_tests.rs  sprint_detail_card_list_tests.rs  sprint_filter_toggle_tests.rs  sprint_picker_tests.rs  stale_model_regression_tests.rs  undo_redo_tests.rs  (+1 more)
(+368 files in other folders)
