[package]
name = "kanban-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
kanban-domain = { path = "../kanban-domain" }

[dev-dependencies]
serde_json = { workspace = true }
