[package]
name = "kanban-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for the kanban project management tool"
keywords = ["kanban", "cli", "terminal", "project-management", "productivity"]
categories = ["command-line-utilities"]

[[bin]]
name = "kanban"
path = "src/main.rs"

[dependencies]
kanban-core = { path = "../kanban-core" }
kanban-domain = { path = "../kanban-domain" }
kanban-tui = { path = "../kanban-tui" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
