[package]
name = "kanban-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command-line interface for the kanban project management tool"
keywords = ["kanban", "cli", "terminal", "project-management", "productivity"]
categories = ["command-line-utilities"]

[lib]
name = "kanban_cli"
path = "src/lib.rs"

[[bin]]
name = "kanban"
path = "src/main.rs"

[features]
default = ["tui", "json", "sqlite"]
tui = ["dep:kanban-tui"]
json = ["kanban-service/json"]
sqlite = ["kanban-service/sqlite"]

[dependencies]
kanban-core = { path = "../kanban-core", version = "^0.6" }
kanban-domain = { path = "../kanban-domain", version = "^0.6" }
kanban-persistence = { path = "../kanban-persistence", version = "^0.6" }
kanban-service = { path = "../kanban-service", version = "^0.6" }
kanban-tui = { path = "../kanban-tui", version = "^0.6", optional = true }
clap.workspace = true
clap_complete.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
kanban-persistence-json = { path = "../kanban-persistence-json", version = "^0.6" }
kanban-persistence-sqlite = { path = "../kanban-persistence-sqlite", version = "^0.6", features = ["test-helpers"] }
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
