[package]
name = "kanban-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core traits, errors, and result types for the kanban project management tool"
keywords = ["kanban", "project-management", "tui", "core", "traits"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
toml = "0.8"
dirs = "5.0"
