[package]
name = "kanban-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
kanban-core = { path = "../kanban-core" }
kanban-domain = { path = "../kanban-domain" }
diesel.workspace = true
diesel-async.workspace = true
diesel_migrations.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true

[dev-dependencies]
mockall.workspace = true
