[package]
name = "kanban-domain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Domain models and business logic for the kanban project management tool"
keywords = ["kanban", "project-management", "domain", "models", "business-logic"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
kanban-core = { path = "../kanban-core", version = "^0.1" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true

[dev-dependencies]
mockall.workspace = true
