[package]
name = "kanban-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Model Context Protocol server for the kanban project management tool"
keywords = ["kanban", "mcp", "llm", "project-management"]
categories = ["command-line-utilities"]

[[bin]]
name = "kanban-mcp"
path = "src/main.rs"

[features]
default = ["json", "sqlite"]
json = ["kanban-service/json"]
sqlite = ["kanban-service/sqlite"]

[dependencies]
# Workspace crates
kanban-core = { path = "../kanban-core", version = "^0.6" }
kanban-domain = { path = "../kanban-domain", version = "^0.6" }
kanban-persistence = { path = "../kanban-persistence", version = "^0.6" }
kanban-service = { path = "../kanban-service", version = "^0.6" }

# MCP SDK
rmcp = { version = "0.11", features = ["server", "transport-io"] }
schemars = "1.0"

# Async runtime
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# UUID and time
uuid.workspace = true
chrono.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# CLI arguments
clap.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
kanban-domain = { path = "../kanban-domain", version = "^0.6" }
kanban-persistence-json = { path = "../kanban-persistence-json", version = "^0.6" }
kanban-persistence-sqlite = { path = "../kanban-persistence-sqlite", version = "^0.6", features = ["test-helpers"] }
kanban-service = { path = "../kanban-service", version = "^0.6" }
tempfile.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
