[package]
name = "kanban-persistence-sqlite"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "SQLite storage backend for the kanban project management tool"
keywords = ["kanban", "persistence", "sqlite", "storage"]
categories = ["command-line-utilities", "development-tools"]

[features]
# Gates the `write_test_metadata_with_schema_version` /
# `read_test_schema_version` fixture helpers. Mirrors the pattern used by
# kanban-persistence and kanban-service — test-only code stays out of the
# release binary.
test-helpers = []

[dependencies]
kanban-persistence = { path = "../kanban-persistence", version = "^0.7" }
kanban-core = { path = "../kanban-core", version = "^0.7" }
kanban-domain = { path = "../kanban-domain", version = "^0.7" }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite"] }
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
flate2 = "1"

[dev-dependencies]
kanban-service = { path = "../kanban-service", features = ["test-helpers"] }
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
