[package]
name = "kanban-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "kanban-server"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kanban-api = { path = "../kanban-api", version = "^0.7" }
kanban-core = { path = "../kanban-core", version = "^0.7" }
kanban-domain = { path = "../kanban-domain", version = "^0.7" }
kanban-service = { path = "../kanban-service", version = "^0.7" }
prometheus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
