[package]
name = "kanban-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Terminal user interface for the kanban project management tool"
keywords = ["kanban", "tui", "terminal", "ratatui", "project-management"]
categories = ["command-line-utilities"]

[features]
default = []
sqlite = ["kanban-service/sqlite-storage"]

[dependencies]
kanban-core = { path = "../kanban-core", version = "^0.3" }
kanban-domain = { path = "../kanban-domain", version = "^0.3" }
kanban-persistence = { path = "../kanban-persistence", version = "^0.3" }
kanban-service = { path = "../kanban-service", version = "^0.3" }
ratatui.workspace = true
crossterm.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
async-trait.workspace = true
tracing.workspace = true
arboard = { version = "3.4", features = ["wayland-data-control"] }
pulldown-cmark = "0.13"

[dev-dependencies]
kanban-persistence-json = { path = "../kanban-persistence-json", version = "^0.3" }
tempfile = "3.13"
